Add universal comments function and style for comments

--- a/assets/styles/site/_site.scss
+++ b/assets/styles/site/_site.scss
@@ -1,5 +1,6 @@
 @import 'primary/page-header';
 @import 'primary/page-section';
 @import 'primary/posts-and-pages';
+@import 'primary/comments';
 @import 'header';
 @import 'footer';
