--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -5,15 +5,17 @@ $white: #fff;
 $text-color: #656269;
 $link-color: #999;
 $link-hover-color: #a0ce4e;
-$color_333: #333;
-$color_f6: #f6f6f6;
-$color_f1f2: #f1f2f4;
-$color_e8: #e8e8e8;
+$color-333: #333;
+$color-f6: #f6f6f6;
+$color-f9: #f9f9f9;
+$color-f1f2: #f1f2f4;
+$color-e8: #e8e8e8;
 $color-d9: #d9d9d9;
+$color-da: #dadada;
 $color-ccc: #ccc;
 $color-cacad8: #cacad8;
 $color-e4e5ea: #e4e5ea;
-
+$color-74: #747474;
 $border_color: #d2d2dd;
 
 /*********************************************************************************
@@ -26,16 +28,16 @@ $pre-loader-bg-color: #fefefe;
 * Pagination
 ******************************************************************************** */
 $pagination-color: #99c24d;
-$pagination-link-color: #747474;
+$pagination-link-color: $color-74;
 
 /*********************************************************************************
 * Navigation
 ******************************************************************************** */
 $navigation-link-color: $link-color;
 $navigation-link-hover-color: $link-hover-color;
-$navigation-border-color: #dadada;
-$dropdown-item-color: $color_333;
-$dropdown-item-bg-color: #f9f9f9;
+$navigation-border-color: $color-da;
+$dropdown-item-color: $color-333;
+$dropdown-item-bg-color: $color-f9;
 
 /*********************************************************************************
 * Single post navigation
@@ -45,10 +47,10 @@ $sp-navigation-border-color: $border_color;
 /*********************************************************************************
 * Top header bar
 ******************************************************************************** */
-$header-top-bar-bg-color: #f6f6f6;
-$header-top-bar-color: $color_333;
+$header-top-bar-bg-color: $color-f6;
+$header-top-bar-color: $color-333;
 $header-border-bottom-color: #d2d3d4;
-$header-wrapper-color: #747474;
+$header-wrapper-color: $color-74;
 
 /*********************************************************************************
 * Blog
@@ -58,7 +60,7 @@ $blog-categories-bg-color: $link-hover-color;
 $blog-article-border-color: $border_color;
 $blog-title-border-color: $color-d9;
 $blog-excerpt-color: $text-color;
-$blog-article-footer-bg-color: $color_f1f2;
+$blog-article-footer-bg-color: $color-f1f2;
 $blog-footer-color: $text-color;
 
 /*********************************************************************************
@@ -73,4 +75,4 @@ $footer-widget-bg-color: #363839;
 $footer-widget-color: $color-ccc;
 $footer-widget-link-color: $link-color;
 $footer-widget-link-hover-color: $link-hover-color;
-$footer-copyright-bg-color: $color_333;
+$footer-copyright-bg-color: $color-333;
