--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -16,8 +16,10 @@ article.post {
     margin: -1px 0 15px -1px;
 
     img {
-      width: 100%;
-      height: auto;
+      width: 300px;
+      height: 250px;
+      background: no-repeat 50% 50%;
+      background-size: cover;
     }
 
     @media (min-width: $screen-sm-min) {
