Add related posts slider and fix social share error

--- a/assets/styles/site/_site.scss
+++ b/assets/styles/site/_site.scss
@@ -2,5 +2,6 @@
 @import 'primary/page-section';
 @import 'primary/posts-and-pages';
 @import 'primary/comments';
+@import 'primary/related-posts-slider';
 @import 'header';
 @import 'footer';
