--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -28,6 +28,7 @@
 ******************************************************************************** */
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome';
+@import '~swiper/dist/css/swiper';
 
 /*********************************************************************************
 * Typography
