--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -265,8 +265,9 @@ article.has-post-thumbnail {
 * Single post
 ******************************************************************************** */
 article.universal__single-post {
-  border: 0;
+  border: 0 !important;
   margin-top: 30px;
+  background-color: $white !important;
 
   figure.entry-thumbnail {
     margin: 20px 0;
